feat: Add Statefulsets in the list of deployments
